# vantage-point

./: .env.example  .gitignore  RAILWAY.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.production.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  railway.json
backend/app/: __init__.py  config.py  main.py
backend/app/ai/: __init__.py  client.py  logged_client.py  pricing.py  tools.py
backend/app/api/: __init__.py  admin.py  ai_settings.py  auth.py  briefing.py  chat.py  deps.py  journal.py  logs.py  market.py  settings.py  watchlist.py
backend/app/auth/: __init__.py  passwords.py  tokens.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_initial.py  0002_journal_settings.py  0003_chat_sessions.py  0004_ai_config.py  0005_ticker_info.py
backend/app/scheduler/: __init__.py  jobs.py
backend/app/schemas/: __init__.py  ai_settings.py  auth.py  briefing.py  chat.py  journal.py  logs.py  market.py  settings.py  watchlist.py
backend/app/services/: __init__.py  agent_loop.py  ai_settings.py  background.py  briefing.py  chat.py  chat_sessions.py  journal.py  market_data.py  news.py  relevance.py  settings.py  technicals.py  ticker_info.py  users.py  watchlist.py
backend/scripts/: __init__.py  create_user.py  fetch_data.py  score_news.py
frontend/: .dockerignore  .env.production.example  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  railway.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx  (+1 more)
(+71 files in other folders)
